--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                      <div>NAME</div>
                   </div>
                   <div>
-                     <div class="list"><span>age</span><span>:</span><span>25</span></div>
+                     <div class="list"><span>age</span><span>:</span><span>28</span></div>
                      <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
-                     <div class="list"><span>Power</span><span>:</span><span>Postman</span></div>
-                     <div class="list"><span>location</span><span>:</span><span>moscow</span></div>
+                     <div class="list"><span>Power</span><span>:</span><span>ПостманЪ, ЛинексЪ, ЧарльзЪ</span></div>
+                     <div class="list"><span>location</span><span>:</span><span>Япония</span></div>
 
                   </div>
                </div>
