добавление картинки джека

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="">
                      <!-- Фото -->
-                     <img src="" alt="Фотография">
+                     <img src="джек.jpg" alt="Фотография">
                   </div>
                </div>
                <div class="text">
