--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                <div class="text">
                   <!-- Имя -->
                   <div class="name">
-                     <div>NAME</div>
+                     <div>VICTORIA</div>
                      <div>NAME</div>
                   </div>
                   <div>
-                     <div class="list"><span>age</span><span>:</span><span>28</span></div>
+                     <div class="list"><span>age</span><span>:</span><span>ВОСЕМЬНАДЦАТЬ</span></div>
                      <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
                      <div class="list"><span>Power</span><span>:</span><span>ПостманЪ, ЛинексЪ, ЧарльзЪ</span></div>
-                     <div class="list"><span>location</span><span>:</span><span>Япония</span></div>
+                     
 
                   </div>
                </div>
